2007-11-07  Tim-Philipp Müller  <tim at centricular dot net>

	* NEWS:
	* src/conn-http.h:
	  GConnHttp is no longer marked as experimental API (which doesn't
	  mean that it's bug-free, of course).

2007-11-05  Tim-Philipp Müller  <tim at centricular dot net>

	* src/conn.c: (gnet_conn_new_socket):
	  Improvie docs a bit.

	* src/gnet-private.h:
	  Change refcount field from guint to gint to avoid compiler
	  warnings when using GLib's g_atomic_* macros.

2007-11-05  Tim-Philipp Müller  <tim at centricular dot net>

	* doc/gnet-sections.txt:
	* src/conn-http.c: (gnet_conn_http_ia_cb), (gnet_conn_http_run_async),
	  (gnet_conn_http_run), (gnet_conn_http_delete_internal),
	  (gnet_http_get), (gnet_conn_http_set_main_context):
	* src/conn-http.h: (GConnHttpFunc):
	  API: add gnet_conn_http_set_main_context().
	  Make GConnHttp work with a custom main context.

	* tests/check/gnet/gnetconnhttp.c: (icy_async_cb), (test_shoutcast):
	  Use our own main context in the shoutcast unit test, to make sure
	  GConnHttp works fine with a custom main context.

2007-11-05  Tim-Philipp Müller  <tim at centricular dot net>

	* src/conn-http.c: (gnet_conn_http_conn_recv_response):
	  Check the server response for a supported protocol and emit an
	  error event if a non-supported protocol is encountered; also emit
	  an error if the response is malformed.

	* src/conn-http.h:
	  Fix typo in docs.

	* tests/check/gnet/gnetconnhttp.c: (icy_async_cb),
	  (test_shoutcast), (gnetconnhttp_suite):
	  Add unit test to make sure we accept shoutcast (ICY) server responses
	  in addition to HTTP server responses.

2007-11-05  Tim-Philipp Müller  <tim at centricular dot net>

	* src/socks-private.c: (_gnet_socks_tcp_socket_server_accept):
	* src/tcp.c: (gnet_tcp_socket_ref), (gnet_tcp_socket_unref_internal),
	  (gnet_tcp_socket_unref), (tcp_socket_server_accept_async_cb):
	  Do atomic refcounting for GTcpSocket (however much sense that makes).
